# WGBS_tools

./: .gitignore  README.md  env.yaml  pyproject.toml  run_all.sh  run_all_v2.sh  run_ncbi_wt.sh  setup.sh
samples/: samples_ncbi.yaml  samples_user.yaml
wgbs_tools/: NC2M_差异分析报告.md  __init__.py  __main__.py  config.py  pipeline.py
wgbs_tools/modules/: caller.py  dedup.py  extractor.py  genome.py  mapping.py  summary.py  trimming.py
wgbs_tools/utils/: genome_utils.py  parallel.py  shell.py  stats.py
